# k8s-openapi-secret

./: Cargo.toml
src/: lib.rs
