[package]
name = "k8s-openapi-secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = "0.15.0"
thiserror = "1.0.32"

[dev-dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
kube = "0.74.0"
tokio = { version = "1.20.1", features = ["rt", "macros"] }
ulid = { version = "1.0.0", features = ["serde"] }
